fix alignment of "wiki/language"

--- a/public_html/unblock_styles.css
+++ b/public_html/unblock_styles.css
@@ -26,7 +26,7 @@ a:hover{
 }
 
 form{
-   white-space:normal;
+   white-space:pre-wrap;
 }
 
 .overridePre{
@@ -39,7 +39,7 @@ form{
    font-size: 2.0em;
    font-weight: bold;
    color: #000 !important;
-   width: 100%;
+   width: 101%;
    border: none;
    padding-left: 20px;
    padding-top: 20px;
@@ -68,8 +68,8 @@ form{
    text-align: left;
    margin-left: -20px;
    padding-left: 4px;
-   width:100%;
-   font-size: 0.9em;
+   width:102%;
+   font-size: 0.8em;
 }
 
 #sitenotice ul{
@@ -82,7 +82,7 @@ form{
    background-color: #f9f9f9;
    height:auto;
    color: black;
-   width: 100%;
+   width: 101%;
    font-size: .95em;
    font-family: "Franklin Gothic Medium", "Franklin Gothic", "ITC Franklin Gothic", Arial, sans-serif;
    border-bottom: 1px solid #ddd;
@@ -112,10 +112,11 @@ display: inline;
 display: block;
 float: left;
 padding: 0.3em 0.6em;
+color: black !important;
 }
 
-#navigation_menu li a {
-color: black !important;
+#navigation_menu_language {
+	padding-top: 4px;
 }
 
 #navigation_menu li a:hover {
@@ -199,7 +200,7 @@ background-color: #e0e0e0 !important;
    padding-left: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
-   width:100%;
+   width:101%;
 }
 
 #footer p{
@@ -639,8 +640,4 @@ text-align: left;
 
 #trashbin {
 	height: 30px;
-}
-/* Login Screen */
-.dropdown-menu {
-	left:28%;
 }
